--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body> 
+  <% flash.each do |name, msg| %>
+    <%= msg %>
+  <% end %>
     <%= yield %>
   </body>
 </html>
