--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,7 +13,8 @@
   <tr>
     <td><%= article.title %></td>
     <td><%= article.discription %></td>
-    <td>Placeholder</td>
+  
+    <td> <%= link_to 'Delete',article_path(article), data:{turbo_method: :delete , turbo_confirm: "Are you Sure?"}  %></td>
   </tr>
   <% end %>
 </tbody>
