--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,3 @@
-<h1>this is the about page</h1>
+<h1>This is the About Page</h1>
+<%= link_to "Return", articles_path %>
+<%= link_to "Home Page", root_path %>
