--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<h1>HOME</h1>
+<h1>HOME PAGE</h1>
+<%= link_to "Return", articles_path %>
+<%= link_to "About Page", about_path %>
+
 <%# <form action="action_page.php" method="post">
   <div class="imgcontainer">
     <img src="img_avatar2.png" alt="Avatar" class="avatar">
