added signup in home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <h1>HOME PAGE</h1>
 <%= link_to "Return", articles_path %>
-<%= link_to "About Page", about_path %>
+<%= link_to "About", about_path %>
+<%= link_to "SignUp", signup_path%>
 
 <%# <form action="action_page.php" method="post">
   <div class="imgcontainer">
