--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,5 @@
 <% if @article.errors.any? %>
-  <h2>The following errors prevented the article from being saved</h2>
+  <h2>THE FOLLOWING ERRORS PREVENTED ARTICLE FROM BEING SAVED!!!</h2>
   <ul>
     <% @article.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
