--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -20,6 +20,8 @@
   <% end %>
 </tbody>
 </table>
-<p><%= link_to "Create New Article", new_article_path %></p>
-<%= link_to "Home", root_path %>
+<p><%= link_to "Create New Article", new_article_path %></p> 
+<p><%= link_to "Home", root_path %></p>
+<p><%= link_to "Users_Details", users_path%></p>
+
 
