--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,4 +4,4 @@
 
 <%= link_to 'Edit',edit_article_path(@article) %>|
 <%= link_to 'Delete',article_path(@article), data: { turbo_method: :delete, turbo_confirm: "Are you Sure?" } %>|  
-<%= link_to 'Return',articles_path%>
+<%= link_to 'Articles',articles_path%>
