--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -20,6 +20,11 @@
     <%= f.text_area :discription %>
   </p>
   <p>
+    <%= f.label :user_id %>
+    <br>
+    <%= f.text_area :user_id %>
+  </p>
+  <p>
     <%= f.submit %>
   </p>
 <% end %>
