--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,5 @@
 <h1>Articles listing page</h1>
-<table>
-<thead>
-<tr>
-<th>Title</th>
-<th>Description</th>
-<th colspan="3"> Actions</th>
-</tr>
-</thead>
-
-<tbody>
-  <% @articles.each do |article| %>
-  <tr>
-    <td><%= article.title %></td>
-    <td><%= article.discription %></td>
-    <td><%= link_to "Show", article_path(article) %></td>
-    <td><%= link_to "Edit", edit_article_path(article) %></td>
-    <td> <%= link_to "Delete", article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you Sure?" } %></td>
-  </tr>
-  <% end %>
-</tbody>
-</table>
+<%= render "article"%>
 <p><%= link_to "Create New Article", new_article_path %></p> 
 <p><%= link_to "Home", root_path %></p>
 <p><%= link_to "Users_Details", users_path%></p>
