--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,8 @@
     <td><%= user.email %></td>
     <td><%= link_to "Show", user_path(user) %></td>
     <td><%= link_to "Edit", edit_user_path(user) %></td>
-    <td> <%= link_to "Delete", user_path(user), data: { turbo_method: :delete, turbo_confirm: "Are you Sure?" } %></td>
+    <td> <%= link_to "Delete", user_path(user), data: { turbo_method: :delete, turbo_confirm: "All Information Assocciated With This User Will Be Deleted!!!
+    \nDo You Want to Continue? " } %></td>
   </tr>
   <% end %>
 </tbody>
