--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,10 @@
-<h1>Showing Users</h1>
+<h1><%= @user.username %>'s Profile</h1>
 <p><strong>Username: </strong><%= @user.username %></p>
 <p><strong>Email: </strong><%= @user.email%></p>
 
 <%= link_to 'Edit',edit_user_path(@user) %>|
 <%= link_to 'Delete',user_path(@user), data: { turbo_method: :delete, turbo_confirm: "All Information Assocciated With This User Will Be Deleted!!!\nDo You Want to Continue? " } %>|  
 <%= link_to 'User_Details',users_path%>
+
+<h3>Articles</h3>
+<%= render 'articles/article'%>
