--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,16 +4,22 @@
 <th>Title</th>
 <th>Description</th>
 <th>User_Id</th>
+<th>Assocciated_To:</th>
 <th colspan="3"> Actions</th>
+
 </tr>
 </thead>
 
 <tbody>
   <% @articles.each do |article| %>
+  
   <tr>
     <td><%= article.title %></td>
     <td><%= article.discription %></td>
    <td><%= article.user_id %></td>
+   <td><% if article.user%>
+   <%= link_to article.user.username, user_path(article.user)%>
+  <%end%></td>
     <td><%= link_to "Show", article_path(article) %></td>
     <td><%= link_to "Edit", edit_article_path(article) %></td>
     <td> <%= link_to "Delete", article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you Sure?" } %></td>
