--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,5 +3,8 @@
 <p><%= link_to "Create New Article", new_article_path %></p> 
 <p><%= link_to "Home", root_path %></p>
 <p><%= link_to "Users_Details", users_path%></p>
+<p><%= link_to "SignUp", signup_path%></p>
+<h4>Already a user!!</h4>
+<p><%= link_to "Log In", login_path%></p>
 
 
