--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,3 +6,4 @@
 <%= link_to 'Edit',edit_article_path(@article) %>|
 <%= link_to 'Delete',article_path(@article), data: { turbo_method: :delete, turbo_confirm: "Are you Sure?" } %>|  
 <%= link_to 'Articles',articles_path%>
+<p><%= link_to "Create New Article", new_article_path %></p> 
