--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,19 @@
+<%= link_to "Home", root_path %>|
+<%= link_to "Users_Details", users_path %>|
+<%= link_to "SignUp", signup_path %>
+
 <h1>Articles listing page</h1>
-<%= render "article"%>
+
+<%= render "article" %>
+<% if logged_in? %>
 <p><%= link_to "Create New Article", new_article_path %></p> 
-<p><%= link_to "Home", root_path %></p>
-<p><%= link_to "Users_Details", users_path%></p>
-<p><%= link_to "SignUp", signup_path%></p>
+<% end %>
+
+<% if logged_in? %>
+<p><%= link_to "Log Out", logout_path %></p>
+<% else %>
 <h4>Already a user!!</h4>
-<p><%= link_to "Log In", login_path%></p>
+<p><%= link_to "Log In", login_path %></p>
+<% end %>
 
 
