--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
 <h1>Create a New Article</h1>
-<%= render 'form' %>
-<%= link_to 'Articles',articles_path%>
+<%= render "form" %>
+<%= link_to "Articles", articles_path %>
 
