--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -14,13 +14,16 @@
   <% @user.each do |user| %>
   <tr>
     <td><%= user.id %></td>
-    <td><%= user.username %></td>
+    <td ><%= user.username %><%="*"if user.admin?%></td>
     <td><%= user.email %></td>
+    
     <td><%= user.articles.length %></td>
      <td><%= link_to "Show", user_path(user) %></td>
+    <% if logged_in? && (user == current_user || current_user.admin?) %>
     <td><%= link_to "Edit", edit_user_path(user) %></td>
     <td> <%= link_to "Delete", user_path(user), data: { turbo_method: :delete, turbo_confirm: "All Information Assocciated With This User Will Be Deleted!!!
-                                           \nDo You Want to Continue? " } %></td>
+                                                        \nDo You Want to Continue? " } %></td>
+    <% end %>
   </tr>
   <% end %>
 </tbody>
