--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,9 @@
 <h1>Sign-UP for User_M</h1>
-<%= render 'form' %>
+<%= render "form" %>
+
+<% if logged_in? %>
+<p><%= link_to "Logout", login_path %></p>
+<% else %>
 <h4>Already a user!!</h4>
-<p><%= link_to "Log In", login_path%></p>
+<p><%= link_to "Log In" %></p>
+<% end %>
